# glsvd

./: CMakeLists.txt  README.md  build.sh
GKlib/: getopt.c
SVDlib/: main.c  svdlib.c
example_files/: gu_file
include/: CMakeLists.txt  def.h  proto.h  slim.h  struct.h
src/: #calculate_gu.c#  CMakeLists.txt  assign_cluster.c  calculate_gu.c  cmd.c  global_predict.c  gu_assign_cluster.c  predict.c  util.c
