INCLUDE_DIRECTORIES(${SLIM_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${GKLIB_PATH})
INCLUDE_DIRECTORIES(${SVDLIB_PATH})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(SLIM_SOURCES assign_cluster.c predict.c global_predict.c cmd.c util.c calculate_gu.c gu_assign_cluster.c)

#LINK_LIBRARIES(${BCLSLIB_PATH}/libbcls.a)
file(GLOB GKLIB_SOURCES ${GKLIB_PATH}/csr.c ${GKLIB_PATH}/error.c ${GKLIB_PATH}/memory.c ${GKLIB_PATH}/timers.c ${GKLIB_PATH}/string.c ${GKLIB_PATH}/gk_util.c ${GKLIB_PATH}/io.c ${GKLIB_PATH}/fs.c ${GKLIB_PATH}/mcore.c ${GKLIB_PATH}/blas.c ${GKLIB_PATH}/sort.c ${GKLIB_PATH}/getopt.c ${GKLIB_PATH}/fkvkselect.c)

LINK_LIBRARIES(${SVDLIB_PATH}/libsvd.a)
LINK_LIBRARIES(m gsl gslcblas)

ADD_LIBRARY(SLIM ${SLIM_SOURCES} ${GKLIB_SOURCES})

INSTALL(TARGETS SLIM 
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib 
	ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)	

ADD_EXECUTABLE(slsvd assign_cluster)
ADD_EXECUTABLE(rglsvd calculate_gu)
ADD_EXECUTABLE(sglsvd gu_assign_cluster)
ADD_EXECUTABLE(rlsvd predict)
ADD_EXECUTABLE(gpredict global_predict)

TARGET_LINK_LIBRARIES(rglsvd SLIM)
TARGET_LINK_LIBRARIES(rglsvd ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(slsvd SLIM)
TARGET_LINK_LIBRARIES(slsvd ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(sglsvd SLIM)
TARGET_LINK_LIBRARIES(sglsvd ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(rlsvd SLIM)
TARGET_LINK_LIBRARIES(rlsvd ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(gpredict SLIM)
TARGET_LINK_LIBRARIES(gpredict ${MPI_LIBRARIES})
